# serverAPI

./: pyproject.toml  pytest.ini
serveAPI/: addr.py  container.py  di.py  dispatcher.py  encoder.py  exceptionhandler.py  exceptions.py  handler.py  interfaces.py  middleware.py  parser.py  router.py  safedict.py  serverAPI.py  taskcontext.py  taskrunner.py  tcpserver.py  udpserver.py  validator.py
serveAPI/datatypes/: pydantic_input.py  str_hash.py  str_input.py
serveAPI/dependencies/: depregistry.py  inject.py  mapfunction.py  model.py
serveAPI/input_types/: str_input.py
serveAPI/launchers/: asyncio_launcher.py
serveAPI/servers/: tcpserver.py  udpserver.py
serveAPI/spawns/: asyncio_launcher.py  asyncio_spawn.py  sync_spawn.py
tests/: conftest.py  test_dispatch.py  test_runner.py  test_taskrunner.py  test_taskrunner2.py
tests/dependencies/: test_dependencies.py  test_funcargs.py  test_funcargs_ext.py  test_inject.py
tests/unit/: test_di.py  test_exceptionhandler.py  test_hashed_str_encoder.py  test_intrusive_str_encoder.py  test_middleware.py  test_param_dep.py  test_params.py  test_params_addr.py  test_router.py  test_safedict.py  test_simple_str_encoder.py
